new fixes for new added modules

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @use './modules/hero';
 @use './modules/accordions';
 @use './modules/cards';
+@use './modules/cert-cards';
 
 @use './mixins/breakpoints';
 @use './mixins/rem';
