--- a/src/html/templates/modules/certifications.html
+++ b/src/html/templates/modules/certifications.html
@@ -5,6 +5,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🖥️",
+        "image": "images/cisco_logo.jpeg",
         "year": "2025",
         "title": "Computer Hardware Basics",
         "issuer": "Cisco",
@@ -15,6 +16,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "👨‍💻",
+        "image": "",
         "year": "2025",
         "title": "JavaScript Essentials",
         "issuer": "Cisco",
@@ -25,6 +27,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "📶",
+        "image": "",
         "year": "2023",
         "title": "CCNA: Enterprise Networking, Security, and Automation",
         "issuer": "Cisco",
@@ -35,6 +38,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🔐",
+        "image": "",
         "year": "2023",
         "title": "Cybersecurity Essentials",
         "issuer": "Cisco",
@@ -45,6 +49,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🎓",
+        "image": "",
         "year": "2024",
         "title": "Bachelor of Science in Information Technology (Cum Laude)",
         "issuer": "Mabalacat City College",
