--- a/src/html/templates/modules/partials/cert-card.html
+++ b/src/html/templates/modules/partials/cert-card.html
@@ -1,7 +1,7 @@
 <div class="certification-card animate-on-scroll">
-  <div class="cert-badge">
-    <div class="cert-icon">@@icon</div>
-    <div class="cert-year">@@year</div>
+  <div class="cert-badge" @@if (image) {style="background-image: url('@@image');"}>
+    <!-- <div class="cert-icon">@@icon</div>
+    <div class="cert-year">@@year</div> -->
   </div>
   <div class="cert-content">
     <h3 class="cert-title">@@title</h3>
