added vercel ignore and fix new cert card design

--- a/src/html/templates/modules/partials/cert-card.html
+++ b/src/html/templates/modules/partials/cert-card.html
@@ -10,8 +10,10 @@
     <div class="cert-skills">
       @@skills
     </div>
-    <div class="cert-verify">
-      <a href="@@link" class="verify-link">Verify Certificate</a>
-    </div>
+    @@if (link) {
+      <div class="cert-verify">
+        <a href="@@link" class="verify-link">Verify Certificate</a>
+      </div>
+    }
   </div>
 </div>
