--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@
 @use './modules/tiles';
 @use './modules/hero';
 @use './modules/accordions';
-@use './modules/cards';
+@use './modules/general-cards';
 @use './modules/cert-cards';
 
 @use './mixins/breakpoints';
