--- a/src/html/templates/modules/certifications.html
+++ b/src/html/templates/modules/certifications.html
@@ -5,7 +5,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🖥️",
-        "image": "images/cisco_logo.jpeg",
+        "image": "images/cisco_logo.jpg",
         "year": "2025",
         "title": "Computer Hardware Basics",
         "issuer": "Cisco",
@@ -16,7 +16,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "👨‍💻",
-        "image": "",
+        "image": "images/cisco_logo.jpg",
         "year": "2025",
         "title": "JavaScript Essentials",
         "issuer": "Cisco",
@@ -27,7 +27,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "📶",
-        "image": "",
+        "image": "images/cisco_logo.jpg",
         "year": "2023",
         "title": "CCNA: Enterprise Networking, Security, and Automation",
         "issuer": "Cisco",
@@ -38,7 +38,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🔐",
-        "image": "",
+        "image": "images/cisco_logo.jpg",
         "year": "2023",
         "title": "Cybersecurity Essentials",
         "issuer": "Cisco",
@@ -49,7 +49,7 @@
 
       @@include('templates/modules/partials/cert-card.html', {
         "icon": "🎓",
-        "image": "",
+        "image": "images/mcc_logo.png",
         "year": "2024",
         "title": "Bachelor of Science in Information Technology (Cum Laude)",
         "issuer": "Mabalacat City College",
