--- a/src/html/templates/modules/hero.html
+++ b/src/html/templates/modules/hero.html
@@ -7,7 +7,7 @@
           "background": "url('images/hero1.jpg')",
           "title": "Designing the Web, One Pixel at a Time",
           "subtitle": "Modern, responsive, and user-focused websites that perform",
-          "ctaLink": "#portfolio",
+          "ctaLink": "#projects",
           "ctaText": "View My Work"
         })
         @@include('templates/modules/partials/hero-slide.html', {
