added target and added new projects

--- a/src/html/templates/modules/partials/cert-card.html
+++ b/src/html/templates/modules/partials/cert-card.html
@@ -12,7 +12,7 @@
     </div>
     @@if (link) {
       <div class="cert-verify">
-        <a href="@@link" class="verify-link">Verify Certificate</a>
+        <a href="@@link" class="verify-link" target="_blank" rel="noopener noreferrer">See More</a>
       </div>
     }
   </div>
