--- a/src/scss/modules/_cert-cards.scss
+++ b/src/scss/modules/_cert-cards.scss
@@ -12,7 +12,7 @@
         }
 
         .certifications-grid {
-            @include card-grid(360px);
+            @include card-grid();
         }
 
         .certification-card {
@@ -28,9 +28,9 @@
         .cert-badge {
             background: $gradient-accent;
             padding: 5.5rem 1.5rem;
-            background-size: contain;
+            background-size: cover;
             background-repeat: no-repeat;
-            background-position: center;
+            background-position: top;
             display: flex;
             justify-content: space-between;
             align-items: center;
