added new tiles values

--- a/src/html/templates/modules/contact.html
+++ b/src/html/templates/modules/contact.html
@@ -38,6 +38,20 @@
             "value": "@@tile_d_value",
             "link": "@@tile_d_link"
           })
+
+          @@include('templates/modules/partials/tile.html', {
+            "icon": "@@tile_e_icon",
+            "label": "@@tile_e_label",
+            "value": "@@tile_e_value",
+            "link": "@@tile_e_link"
+          })
+
+           @@include('templates/modules/partials/tile.html', {
+            "icon": "@@tile_f_icon",
+            "label": "@@tile_f_label",
+            "value": "@@tile_f_value",
+            "link": "@@tile_f_link"
+          })
         </div>
       </div>
 
